# PlaPrice

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  shops-backup.json
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-shop-price-crawler/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-shop-price-crawler/checklists/: requirements.md
specs/001-shop-price-crawler/contracts/: cli-interface.md
specs/002-gui-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-gui-interface/checklists/: requirements.md
specs/002-gui-interface/contracts/: gui-interface.md
src/: __init__.py  __main__.py
src/cli/: __init__.py  main.py
src/crawlers/: __init__.py  base.py  html_crawler.py  multi_crawler.py
src/display/: __init__.py  table_renderer.py
src/gui/: __init__.py  app.py  main_window.py  results_table.py  search_panel.py  settings.py  shop_dialog.py  shop_panel.py  worker.py
src/models/: __init__.py  search.py  shop.py
src/storage/: __init__.py  shop_store.py
src/utils/: __init__.py  http_client.py
tests/: __init__.py
tests/fixtures/: __init__.py  sample_shop.json
tests/fixtures/sample_html/: no_results.html  search_results.html  various_prices.html
tests/integration/gui/: __init__.py  test_gui_integration.py
tests/unit/: test_cli.py  test_crawlers.py  test_display.py  test_http_client.py  test_models.py  test_multi_crawler.py  test_storage.py
tests/unit/gui/: __init__.py  test_main_window.py  test_results_table.py  test_search_panel.py  test_settings.py  test_shop_dialog.py  test_shop_panel.py  test_worker.py
